[project]
name = "langgraph-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langchain-tavily>=0.2.11",
    "langgraph-cli[inmem]>=0.3.6",
    "openai>=1.99.6",
]
